--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "hardhat": "^3.0.6",
     "mocha": "^11.7.2",
     "typescript": "~5.8.0"
+  },
+  "scripts": {
+    "clean": "hardhat clean",
+    "compile": "hardhat compile",
+    "deploy": "echo \"deploy is not required. Skipping...\"",
+    "test": "hardhat test --network ${NETWORK_NAME}"
   }
 }
